[package]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



name = "aptos-voting-ui"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.19", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "wasm"] }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "main" }
